--- a/les 1/index.html
+++ b/les 1/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projecten.html">Projecten</a></li>    
+                <li><a href="contact.html">contact</a></li>
+
+                </anchor></li>
+    </ul></nav></header>
     
 </body>
 </html>
