--- a/les 1/index.html
+++ b/les 1/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projecten.html">Projecten</a></li>    
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
 
                 </anchor></li>
     </ul></nav></header>
