HTML Menu structuur Home

--- a/les 1/index.html
+++ b/les 1/index.html
@@ -14,8 +14,10 @@
                 <li><a href="projecten.html">Projecten</a></li>    
                 <li><a href="contact.html">Contact</a></li>
 
-                </anchor></li>
-    </ul></nav></header>
+                
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
