--- a/les 1/index.html
+++ b/les 1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel = "stylesheet" type="text/css" href = "style.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,8 +14,6 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projecten.html">Projecten</a></li>    
                 <li><a href="contact.html">Contact</a></li>
-
-                
             </ul>
         </nav>
     </header>
