--- a/les 1/index.html
+++ b/les 1/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="FlexContainerMenu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projecten.html">Projecten</a></li>    
                 <li><a href="contact.html">Contact</a></li>
