Eerste Draft Over Mij Home

--- a/les 1/index.html
+++ b/les 1/index.html
@@ -17,6 +17,12 @@
             </ul>
         </nav>
     </header>
+    <div class="OverMijContainer">
+        <main>
+            <img src="Joris.png" class="OverMijFoto">
+            <p>Ik ben Joris</p>
+        </main>
+    </div>
     
 </body>
 </html>
